--- a/app/views/intros/index.html.erb
+++ b/app/views/intros/index.html.erb
@@ -1,3 +1,7 @@
+<% flash.each do |key, value| %>
+    <div class="<%= key %> alert alert-danger" role="alert"><%= value %></div>
+<% end %>
+
 <div class="content">
   <div class="header">
     <h1 class="header-title">
